# ArtLang

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
crates/artlang_ast/: Cargo.toml
crates/artlang_ast/src/: expression.rs  lib.rs  operators.rs  statement.rs
crates/artlang_interpreter/: Cargo.toml
crates/artlang_interpreter/src/: environment.rs  interpreter.rs  main.rs  repl.rs  value.rs
crates/artlang_parser/: Cargo.toml  grammar.pest
crates/artlang_parser/src/: expressions.rs  lib.rs  operators.rs  statements.rs
crates/artlang_repl/: Cargo.toml
crates/artlang_repl/src/: main.rs  repl.rs
crates/artlang_wasm/: Cargo.toml
crates/artlang_wasm/src/: lib.rs
examples/: arithmetic.art  functions.art  loops.art  testing.art
scripts/: build-wasm.sh
web/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.vue
web/src/components/: CodeEditor.vue  OutputPanel.vue
web/src/composables/: useArtLang.ts
web/src/data/: examples.ts
