[package]
name = "artlang_wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
artlang_parser = { path = "../artlang_parser" }
artlang_interpreter = { path = "../artlang_interpreter" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
